update: continued work on header page - just needs better font sizing and spacing

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!--Header Container-->
         <div class="headerText">
             <h1>Hi, I'm Amber!</h1>
-            <p>Fullstack Developer | Game Developer | Creative Thinker</p>
-            <h2>Happy to see you!</h2>
+            <p>I'm a Fullstack Developer and a Game Developer</p>
+            <h2>Lovely to meet you!</h2>
         </div>
         <div class="headerImage">
             <img src="Resources/AmberPicture.png" alt="Description of the image" width="300" height="auto">
