update: renamed AppStore.svg in code so that it displayed correctly

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="playStoreIconHolder">
                             <a href="https://apps.apple.com/au/app/wedding-planner-perfect-match/id6453022498"
                                 target="_blank">
-                                <img src=" Resources/Appstore.svg" alt="Wedding Planner On AppStore Picture"
+                                <img src=" Resources/AppStore.svg" alt="Wedding Planner On AppStore Picture"
                                     style="height: 50px"">
                             </a>
                             <a href="
@@ -141,7 +141,7 @@
                         <div class="playStoreIconHolder">
                             <a href="
                             https://apps.apple.com/au/app/legally-blonde-the-game/id1565262721" target="_blank">
-                                <img src="Resources/Appstore.svg" alt="Legally Blonde On App Store Picture"
+                                <img src="Resources/AppStore.svg" alt="Legally Blonde On App Store Picture"
                                     style="height: 50px"">
                             </a>
                             <a href="
@@ -214,7 +214,7 @@
                         <div class="playStoreIconHolder">
                             <a href="
                             https://apps.apple.com/au/app/dumb-ways-to-survive-netflix/id6450126023" target="_blank">
-                                <img src="Resources/Appstore.svg" alt="Description of SVG" style="height: 50px"">
+                                <img src="Resources/AppStore.svg" alt="Description of SVG" style="height: 50px"">
                             </a>
                             <a href="
                                     https://play.google.com/store/apps/details?id=com.netflix.NGP.DumbWaysToSurvive&hl=en_AU"
