update: made header a bit bettter for phone

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </h2>
 
             <div class="techStackStack">
-                <div class="verticalSpacerOne"></div>
+                <div class="verticalSpacerTwo"></div>
                 <p>
                     <b> Front End:</b> HTML, CSS, JavaScript.
                 </p>
@@ -264,7 +264,7 @@
                 <p>
                     I'm also highly experienced in <b> agile</b> methodologies.
                 </p>
-                <div class="verticalSpacerOne"></div>
+                <div class="verticalSpacerTwo"></div>
             </div>
             <div class="verticalSpacerOne"></div>
         </div>
