update: updated date finished managing dumbways projects

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div class="rightBorderedDiv">
                     <h4>Dumb Ways Free For All</h4>
-                    <h5>Mar 2024 - Present</h5>
+                    <h5>Mar 2024 - Jan 2025</h5>
                     <div class="projectContentContainer">
 
                         <iframe class="iframeVideo" src="https://www.youtube.com/embed/waKAtVn8v64?si=kDC3YQv4MnWlUXma"
@@ -195,7 +195,7 @@
 
                 <div class="leftBorderedDiv">
                     <h4>Dumb Ways to Survive</h4>
-                    <h5>Mar 2024 - Present</h5>
+                    <h5>Mar 2024 - Jan 2025</h5>
                     <div class="projectContentContainer">
 
                         <iframe class="iframeVideo" src="https://www.youtube.com/embed/d9bRM27QjuY?si=_jY0qE0jCLfnVDoa"
